--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <title>Mi Portfolio</title>
   <link rel="stylesheet" href="css/style.css">
   <script src="js/java.js" defer></script>
+  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+
 </head>
 
 <body>
@@ -62,8 +65,7 @@
         </div>
       </div>
       <div class="buttons">
-        <button id="prev">
-          << /button>
+        <button id="prev"><</button>
             <button id="next">></button>
       </div>
       <ul class="dots">
@@ -164,9 +166,9 @@
 
   <section id="contacto" class="contacto">
     <div class="container">
-      <h2>Contáctame</h2>
+      <h1>Contáctame</h1>
       <div class="contacto-form">
-        <form id="contacto-form" method="POST">
+        <form id="contacto-form" action="php/validacion.php" method="post">
           <div class="form-grupo">
             <label for="nombre">Nombre</label>
             <input type="text" id="nombre" name="nombre" placeholder="Tu nombre" required>
@@ -179,14 +181,14 @@
             <label for="mensaje">Mensaje</label>
             <textarea id="mensaje" name="mensaje" placeholder="Escribe tu mensaje" required></textarea>
           </div>
-          <button type="submit" class="btn">Enviar mensaje</button>
+          <button type="submit" class="btn" >Enviar mensaje</button>
         </form>
       </div>
     </div>
   </section>
 
   <footer>
-    <p>Contacta: 666043813, casesgimenezh@gmail.com o através del formulario de arriba</p>
+    <p>Contacta: 666043813, casesgimenezh@gmail.com o a través del formulario de arriba</p>
   </footer>
 
 </body>
